--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>遊戲我只玩第五人格 </p>
     <p>但是本人很菜 四階實力</p>
     <p>ID: 9122756  歡迎加我喔喔喔</p>
-    <img src="images/lynn.idv.profile.jpeg" alt="第五人格帳號" style="width: 400px; border-radius: 15px;">  
+    <img src="lynn.idv.profile.jpeg" alt="第五人格帳號" style="width: 400px; border-radius: 15px;">  
     </section>
 
 
