--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <p>遊戲我只玩第五人格 </p>
     <p>但是本人很菜 四階實力</p>
     <p>ID: 9122756  歡迎加我喔喔喔</p>
-    <img src="lynn.idv.profile.jpeg" alt="第五人格帳號">  
+    <img src="lynn.idv.profile.jpeg" style="width: 280px; border-radius: 12px;">
+
     </section>
 
 
